--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <title>Simple Gray, Professional free website template</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="templatemo_style.css" rel="stylesheet" type="text/css" />
+<link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css">	
 <script language="javascript" type="text/javascript">
 function clearText(field){
 
