--- a/static/css/template_style.css
+++ b/static/css/template_style.css
@@ -84,11 +84,11 @@ h2 {
 .templatemo-bg-gray h1 { color: rgb(74, 164, 180); }
 .templatemo-bg-image-1 {
 	background-color: rgb(60,60,60);
-	background-image: url(../images/templatemo-bg-1.jpg);	
+	background-image: url(../static/images/templatemo-bg-1.jpg);	
 }
 .templatemo-bg-image-2 {
 	background-color: rgb(70, 90, 40);
-	background-image: url(../images/templatemo-bg-2.jpg);
+	background-image: url(../static/images/templatemo-bg-2.jpg);
 }
 .templatemo-bg-image-1, .templatemo-bg-image-2 {
 	background-repeat: no-repeat;
