--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@ function clearText(field){
                   <li><a href="#">Gallery</a></li>
                   <li><a href="#">Company</a></li>
                   <li><a href="#">Contact</a></li>
-		  <li><a href="Login.html" class="last">Login</a></li>
+		  <li><a href="login" class="last">Login</a></li>
             </ul>    	
 		</div> <!-- end of menu -->
     
@@ -42,7 +42,7 @@ function clearText(field){
     
     	<div id="templatemo_banner_image">
         	<div id="templatemo_banner_image_wrapper">
-            	<img src="images/templatemo_image_01.jpg" alt="image" />
+            	<img src="{{ url_for('static', filename='images/templatemo_image_01.jpg') }}" alt="image" />
             </div>
         </div>
         
@@ -89,7 +89,7 @@ function clearText(field){
             
             <div class="column_w300_section_01">
             	<div class="news_image_wrapper">
-                	<img src="images/templatemo_image_02.jpg" alt="image" />
+                	<img src="{{ url_for('static', filename='images/templatemo_image_02.jpg') }}" alt="image" />
                 </div>
                 
                 <div class="news_content">
@@ -103,7 +103,7 @@ function clearText(field){
             
             <div class="column_w300_section_01 even_color">
             	<div class="news_image_wrapper">
-                	<img src="images/templatemo_image_03.jpg" alt="image" />
+                	<img src="{{ url_for('static', filename='images/templatemo_image_03.jpg') }}" alt="image" />
                 </div>
                 
                 <div class="news_content">
@@ -117,7 +117,7 @@ function clearText(field){
             
             <div class="column_w300_section_01">
             	<div class="news_image_wrapper">
-                	<img src="images/templatemo_image_04.jpg" alt="image" />
+                	<img src="{{ url_for('static', filename='images/templatemo_image_04.jpg') }}" alt="image" />
                 </div>
                 
                 <div class="news_content">
