--- a/static/css/template_style.css
+++ b/static/css/template_style.css
@@ -84,11 +84,11 @@ h2 {
 .templatemo-bg-gray h1 { color: rgb(74, 164, 180); }
 .templatemo-bg-image-1 {
 	background-color: rgb(60,60,60);
-	background-image: url(../static/images/templatemo-bg-1.jpg);	
+	background-image: url(../images/templatemo-bg-1.jpg);	
 }
 .templatemo-bg-image-2 {
 	background-color: rgb(70, 90, 40);
-	background-image: url(../static/images/templatemo-bg-2.jpg);
+	background-image: url(../images/templatemo-bg-2.jpg);
 }
 .templatemo-bg-image-1, .templatemo-bg-image-2 {
 	background-repeat: no-repeat;
@@ -320,4 +320,12 @@ h2 {
 	.templatemo-contact-form-2 .checkbox {	margin-bottom: 15px; }
 	.templatemo-contact-form-2 { padding: 30px 30px 0 30px;	}
 	.templatemo-radio-container { margin-left: 30px; }
+}
+ul {
+  list-style: none;
+}
+
+li {
+  display: inline-block;
+  margin-right: 10px; /* add spacing between items */
 }
