--- a/templates/sign-up-athletecoach.html
+++ b/templates/sign-up-athletecoach.html
@@ -32,9 +32,7 @@ function clearText(field){
 	<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" type="text/css">
 	<link href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}" rel="stylesheet" type="text/css">
 	<link href="{{ url_for('static', filename='css/bootstrap-social.css') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='css/template_style.css') }}" rel="stylesheet" type="text/css">
-		
-</head>
+	<link href="{{ url_for('static', filename='css/template_style.css') }}" rel="stylesheet" type="text/css"></head>
 <body class="templatemo-bg-image-1">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -84,36 +82,54 @@ function clearText(field){
 				</div>
 				<div class="row">
 
- <li>
-  <button type="button">
-    <a href="Sign-up-athletecoach.html">Athlete</a>
-  </button>
-</li>
+			
 
- <li>
-  <button type="button">
-    <a href="Sign-up-athletecoach.html">Coach</a>
-  </button>
-</li>
-
- <li>
-  <button type="button">
-    <a href="Sign-up-sponsor.html">Sponsor</a>
-  </button>
-</li>
-    
-  
-  <div class="form-group">
+				
+					<div class="templatemo-one-signin col-md-15">
+				        <div class="form-group">
+				          <div class="col-md-12">		          	
+				            <label for="E-Mail" class="control-label">E-Mail</label>
+				            <div class="templatemo-input-icon-container">
+				            	<i class="fa fa-envelope"></i>
+				            	<input type="text" class="form-control" id="username" placeholder="">
+				            </div>		            		            		            
+				          </div>              
+				        </div>
+					<div class="templatemo-one-signin col-md-15">
+				        <div class="form-group">
+				          <div class="col-md-12">		          	
+				            <label for="username" class="control-label">Username</label>
+				            <div class="templatemo-input-icon-container">
+				            	<i class="fa fa-user"></i>
+				            	<input type="text" class="form-control" id="username" placeholder="">
+				            </div>		            		            		            
+				          </div>              
+				        </div>
+				        <div class="form-group">
+				          <div class="col-md-12">
+				            <label for="password" class="control-label">Password</label>
+				            <div class="templatemo-input-icon-container">
+				            	<i class="fa fa-lock"></i>
+				            	<input type="password" class="form-control" id="password" placeholder="">
+				            </div>
+				          </div>
+				        </div>
+				        
+				        <div class="form-group">
+				          <div class="col-md-12">
+				            <input type="submit" value="SIGN UP" class="btn btn-warning">
+				          </div>
+				        </div>
+				        <div class="form-group">
 				          	<div class="col-md-12">
 				        	<a href="login.html" class="text-center"><span style="color: white">Login</a></span>
 
 				       	 	</div>
 				    	</div>
-
+					</div>
 					
+							
 
-				
-					
 						</a>
 					   
 				</div>				 	
