--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -6,7 +6,7 @@
 <title>Simple Gray, Professional free website template</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="template_style.css" rel="stylesheet" type="text/css" />
+	<link href="{{ url_for('static', filename='css/template_style.css') }}" rel="stylesheet" type="text/css">
 <script language="javascript" type="text/javascript">
 function clearText(field){
 
@@ -41,7 +41,7 @@ function clearText(field){
 <title>Simple Gray, Professional free website template</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="templatemo_style.css" rel="stylesheet" type="text/css" />
+	<link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css">
 <script language="javascript" type="text/javascript">
 function clearText(field){
 
@@ -86,19 +86,19 @@ function clearText(field){
 
  <li>
   <button type="button">
-    <a href="Sign-up-athletecoach.html">Athlete</a>
+    <a href="sign-up-athletecoach.html">Athlete</a>
   </button>
 </li>
 
  <li>
   <button type="button">
-    <a href="Sign-up-athletecoach.html">Coach</a>
+    <a href="sign-up-athletecoach.html">Coach</a>
   </button>
 </li>
 
  <li>
   <button type="button">
-    <a href="Sign-up-sponsor.html">Sponsor</a>
+    <a href="sign-up-sponsor.html">Sponsor</a>
   </button>
 </li>
     
