--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -66,7 +66,7 @@ function clearText(field){
                   <li><a href="#">Gallery</a></li>
                   <li><a href="#">Company</a></li>
                   <li><a href="#">Contact</a></li>
-		  <li><a href="Login.html">Login</a></li>
+		  <li><a href="login">Login</a></li>
             </ul>    	
 		</div> <!-- end of menu -->
     
@@ -86,26 +86,26 @@ function clearText(field){
 
  <li>
   <button type="button">
-    <a href="sign-up-athletecoach.html">Athlete</a>
+    <a href="sign_up_athletecoach">Athlete</a>
   </button>
 </li>
 
  <li>
   <button type="button">
-    <a href="sign-up-athletecoach.html">Coach</a>
+    <a href="sign_up_athletecoach">Coach</a>
   </button>
 </li>
 
  <li>
   <button type="button">
-    <a href="sign-up-sponsor.html">Sponsor</a>
+    <a href="sign_up_sponsor">Sponsor</a>
   </button>
 </li>
     
   
   <div class="form-group">
 				          	<div class="col-md-12">
-				        	<a href="login.html" class="text-center"><span style="color: white">Login</a></span>
+				        	<a href="login" class="text-center"><span style="color: white">Login</a></span>
 
 				       	 	</div>
 				    	</div>
