--- a/templates/sign_up_sponsor.html
+++ b/templates/sign_up_sponsor.html
@@ -64,7 +64,7 @@ function clearText(field){
                   <li><a href="#">Gallery</a></li>
                   <li><a href="#">Company</a></li>
                   <li><a href="#">Contact</a></li>
-		  <li><a href="Login.html">Login</a></li>
+		  <li><a href="login">Login</a></li>
             </ul>    	
 		</div> <!-- end of menu -->
     
@@ -134,7 +134,7 @@ function clearText(field){
 				        </div>
 				        <div class="form-group">
 				          	<div class="col-md-12">
-				        	<a href="login.html" class="text-center"><span style="color: white">Login</a></span>
+				        	<a href="login" class="text-center"><span style="color: white">Login</a></span>
 
 				       	 	</div>
 				    	</div>
