--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -83,27 +83,28 @@ function clearText(field){
 					</div>
 				</div>
 				<div class="row">
+					<div class="col-md-12" align="center">
+				
+ 				<li>
+  				<button type="button">
+    			<a href="sign-up-athletecoach.html">Athlete</a>
+  				</button>
+				</li>
 
- <li>
-  <button type="button">
-    <a href="sign-up-athletecoach.html">Athlete</a>
-  </button>
-</li>
+ 				<li>
+  				<button type="button">
+    			<a href="sign-up-athletecoach.html">Coach</a>
+  				</button>
+				</li>
 
- <li>
-  <button type="button">
-    <a href="sign-up-athletecoach.html">Coach</a>
-  </button>
-</li>
-
- <li>
-  <button type="button">
-    <a href="sign-up-sponsor.html">Sponsor</a>
-  </button>
-</li>
-    
-  
-  <div class="form-group">
+ 				<li>
+  				<button type="button">
+    			<a href="sign-up-sponsor.html">Sponsor</a>
+  				</button>
+				</li>
+				</div>
+				</div>
+  				<div class="form-group">
 				          	<div class="col-md-12">
 				        	<a href="login.html" class="text-center"><span style="color: white">Login</a></span>
 
