changed align center

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -82,27 +82,27 @@ function clearText(field){
 						<h1>Sign up</h1>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row" align="center">
 
- <li>
-  <button type="button">
-    <a href="sign_up_athletecoach">Athlete</a>
-  </button>
-</li>
+					<li>
+					<button type="button">
+						<a href="sign_up_athletecoach">Athlete</a>
+					</button>
+					</li>
 
- <li>
-  <button type="button">
-    <a href="sign_up_athletecoach">Coach</a>
-  </button>
-</li>
+					<li>
+					<button type="button">
+						<a href="sign_up_athletecoach">Coach</a>
+					</button>
+					</li>
 
- <li>
-  <button type="button">
-    <a href="sign_up_sponsor">Sponsor</a>
-  </button>
-</li>
-    
-  
+					<li>
+					<button type="button">
+						<a href="sign_up_sponsor">Sponsor</a>
+					</button>
+					</li>
+				</div>	
+					
   <div class="form-group">
 				          	<div class="col-md-12">
 				        	<a href="login" class="text-center"><span style="color: white">Login</a></span>
