post requests added

--- a/templates/sign_up_sponsor.html
+++ b/templates/sign_up_sponsor.html
@@ -103,7 +103,7 @@ function clearText(field){
 				            <label for="E-Mail" class="control-label">E-Mail</label>
 				            <div class="templatemo-input-icon-container">
 				            	<i class="fa fa-envelope"></i>
-				            	<input type="text" class="form-control" id="username" placeholder="">
+				            	<input type="text" class="form-control" id="email" placeholder="">
 				            </div>		            		            		            
 				          </div>              
 				        </div>
