added post method for login and signup

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -86,13 +86,13 @@ function clearText(field){
 
 					<li>
 					<button type="button">
-						<a href="sign_up_athletecoach">Athlete</a>
+						<a href="sign_up_athlete">Athlete</a>
 					</button>
 					</li>
 
 					<li>
 					<button type="button">
-						<a href="sign_up_athletecoach">Coach</a>
+						<a href="sign_up_coach">Coach</a>
 					</button>
 					</li>
 
