--- a/templates/sign_up_athletecoach.html
+++ b/templates/sign_up_athletecoach.html
@@ -91,7 +91,7 @@ function clearText(field){
 				            <label for="E-Mail" class="control-label">E-Mail</label>
 				            <div class="templatemo-input-icon-container">
 				            	<i class="fa fa-envelope"></i>
-				            	<input type="text" class="form-control" id="username" placeholder="">
+				            	<input type="text" class="form-control" id="email" name="email" placeholder="">
 				            </div>		            		            		            
 				          </div>              
 				        </div>
@@ -101,7 +101,7 @@ function clearText(field){
 				            <label for="username" class="control-label">Username</label>
 				            <div class="templatemo-input-icon-container">
 				            	<i class="fa fa-user"></i>
-				            	<input type="text" class="form-control" id="username" placeholder="">
+				            	<input type="text" class="form-control" id="username" name="username" placeholder="">
 				            </div>		            		            		            
 				          </div>              
 				        </div>
@@ -110,7 +110,7 @@ function clearText(field){
 				            <label for="password" class="control-label">Password</label>
 				            <div class="templatemo-input-icon-container">
 				            	<i class="fa fa-lock"></i>
-				            	<input type="password" class="form-control" id="password" placeholder="">
+				            	<input type="password" class="form-control" id="password" name="password" placeholder="">
 				            </div>
 				          </div>
 				        </div>
