--- a/templates/Login.html
+++ b/templates/Login.html
@@ -89,7 +89,7 @@ function clearText(field){
 				            <label for="username" class="control-label">Username</label>
 				            <div class="templatemo-input-icon-container">
 				            	<i class="fa fa-user"></i>
-				            	<input type="text" class="form-control" id="username" placeholder="">
+				            	<input type="text" class="form-control" id="username" name="username" placeholder="">
 				            </div>		            		            		            
 				          </div>              
 				        </div>
@@ -98,7 +98,7 @@ function clearText(field){
 				            <label for="password" class="control-label">Password</label>
 				            <div class="templatemo-input-icon-container">
 				            	<i class="fa fa-lock"></i>
-				            	<input type="password" class="form-control" id="password" placeholder="">
+				            	<input type="password" class="form-control" id="password" name="password" placeholder="">
 				            </div>
 				          </div>
 				        </div>
