display error message for bad login

--- a/templates/Login.html
+++ b/templates/Login.html
@@ -84,6 +84,11 @@ function clearText(field){
 				</div>
 				<div class="row">
 					<div class="templatemo-one-signin col-md-15">
+						<div class="form-group">
+							<div class="col-md-12">
+								<p>{{error}}</p>
+							</div>
+						</div>
 				        <div class="form-group">
 				          <div class="col-md-12">		          	
 				            <label for="username" class="control-label">Username</label>
@@ -118,16 +123,10 @@ function clearText(field){
 				        </div>
 				        <div class="form-group">
 				          	<div class="col-md-12">
-				        <a href="sign_up" class="text-center"><span style="color: white">Sign up</a></span>
-
+				        	<a href="sign_up" class="text-center"><span style="color: white">Sign up</a></span>
 				       	 	</div>
 				    	</div>
 					</div>
-					
-							
-
-						</a>
-					   
 				</div>				 	
 		      </form>		      		      
 		</div>
