changed email input type

--- a/templates/sign_up_athletecoach.html
+++ b/templates/sign_up_athletecoach.html
@@ -91,7 +91,7 @@ function clearText(field){
 				            <label for="E-Mail" class="control-label">E-Mail</label>
 				            <div class="templatemo-input-icon-container">
 				            	<i class="fa fa-envelope"></i>
-				            	<input type="text" class="form-control" id="email" name="email" placeholder="">
+				            	<input type="email" class="form-control" id="email" name="email" placeholder="">
 				            </div>		            		            		            
 				          </div>              
 				        </div>
