returns error if email is found in db

--- a/templates/sign_up_athletecoach.html
+++ b/templates/sign_up_athletecoach.html
@@ -87,6 +87,11 @@ function clearText(field){
 				
 					<div class="templatemo-one-signin col-md-15">
 				        <div class="form-group">
+							<div class="col-md-12">
+								<p>{{error}}</p>
+							</div>
+						</div>
+						<div class="form-group">
 				          <div class="col-md-12">		          	
 				            <label for="E-Mail" class="control-label">E-Mail</label>
 				            <div class="templatemo-input-icon-container">
