--- a/templates/Login.html
+++ b/templates/Login.html
@@ -121,11 +121,41 @@ function clearText(field){
 				            <input type="submit" value="LOG IN" class="btn btn-warning">
 				          </div>
 				        </div>
-				        <div class="form-group">
-				          	<div class="col-md-12">
-				        	<a href="sign_up" class="text-center"><span style="color: white">Sign up</a></span>
-				       	 	</div>
-				    	</div>
+
+						<div class="container">
+							<div class="col-md-12">			
+								<form class="form-horizontal templatemo-login-form-2" role="form" action="#" method="post">
+									<div class="row">
+										<div class="col-md-12">
+											<center>
+											</br><span>Don't have an account?</span></br>
+											<span>Sign up</span></center></br>
+										</center>	
+								
+										</div>
+									</div>
+									<div class="row" align="center">
+					
+										<li>
+										<button type="button">
+											<a href="sign_up_athlete">Athlete</a>
+										</button>
+										</li>
+					
+										<li>
+										<button type="button">
+											<a href="sign_up_coach">Coach</a>
+										</button>
+										</li>
+					
+										<li>
+										<button type="button">
+											<a href="sign_up_sponsor">Sponsor</a>
+										</button>
+										</li>
+									</div>	
+					
+				        
 					</div>
 				</div>				 	
 		      </form>		      		      
