--- a/templates/athleteprofile.html
+++ b/templates/athleteprofile.html
@@ -37,6 +37,14 @@ function clearText(field){
     </div>  <!-- end of header -->
 </div> <!-- end of header wrapper -->
 
+<div class="header_02">anuraginipig</div>
+<br>
+<div class="header_02">50 years old</div>
+<br>
+<div class="header_02">100m</div>
+<br>
+<div class="header_02">Coach p</div>
+<br>
 <!-- Container for the image gallery -->
 <div class="container">
 
