--- a/templates/sign_up_sponsor.html
+++ b/templates/sign_up_sponsor.html
@@ -84,7 +84,7 @@ function clearText(field){
 
 			<form action="/action_page.php">
   <label for="Role">Role:</label>
-<span style="color: black">
+<span style="color: black; font-size:15px">
 <select name="role" id="role">
     <option value="Company">Company</option>
     <option value="Individual">Individual</option>
@@ -139,7 +139,7 @@ function clearText(field){
 				        </div>
 				        <div class="form-group">
 				          	<div class="col-md-12">
-				        	<a href="login" class="text-center"><span style="color: white">Login</a></span>
+								<a href="login" class="text-center"><span style="color: #09F">Login</a></span>
 
 				       	 	</div>
 				    	</div>
