--- a/templates/sign_up_athletecoach.html
+++ b/templates/sign_up_athletecoach.html
@@ -127,7 +127,7 @@ function clearText(field){
 				        </div>
 				        <div class="form-group">
 				          	<div class="col-md-12">
-				        	<a href="login" class="text-center"><span style="color: white">Login</a></span>
+				        	<a href="login" class="text-center"><span style="color: #09F">Login</a></span>
 
 				       	 	</div>
 				    	</div>
