--- a/templates/Login.html
+++ b/templates/Login.html
@@ -1,165 +1,96 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Simple Gray, Professional free website template</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="{{ url_for('static', filename='css/template_style.css') }}" rel="stylesheet" type="text/css" />
-<script language="javascript" type="text/javascript">
-function clearText(field){
+{% extends 'base.html' %}
 
-    if (field.defaultValue == field.value) field.value = '';
-    else if (field.value == '') field.value = field.defaultValue;
-
-}
-</script>
-</head>
-<head>
-	<!-- templatemo 418 form pack -->
-    <!-- 
-    Form Pack
-    http://www.templatemo.com/preview/templatemo_418_form_pack 
-    -->
-	<title>Login</title>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet" type="text/css">
-	
-	<link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='css/bootstrap-social.css') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='css/template_style.css') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css">	
-</head>
+{% block body %}
 <body class="templatemo-bg-image-1">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Simple Gray, Professional free website template</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css" />
-<script language="javascript" type="text/javascript">
-function clearText(field){
+{% endblock body %}
 
-    if (field.defaultValue == field.value) field.value = '';
-    else if (field.value == '') field.value = field.defaultValue;
-
-}
-</script>
-</head>
-<body>
-<div id="templatemo_header_wrapper">
-<!--  Free Web Templates by TemplateMo.com  -->
-  <div id="templatemo_header">
-    
-   	<div id="site_logo"></div>
-        
-		<div id="templatemo_menu">
-      		<div id="templatemo_menu_left"></div>
-            <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Company</a></li>
-                  <li><a href="#">Contact</a></li>
-		  <li><a href="login" class="current">Login</a></li>
-            </ul>    	
-		</div> <!-- end of menu -->
-    
-    </div>  <!-- end of header -->
-</div> <!-- end of header wrapper -->
-
-	<div class="container">
-		<div class="col-md-12">			
-			<form class="form-horizontal templatemo-login-form-2" role="form" action="#" method="post">
-				<div class="row">
-					<div class="col-md-12">
-						<h1>Login</h1>
-					</div>
+{% block main %}
+<div class="container">
+	<div class="col-md-12">			
+		<form class="form-horizontal templatemo-login-form-2" role="form" action="#" method="post">
+			<div class="row">
+				<div class="col-md-12">
+					<h1>Login</h1>
 				</div>
-				<div class="row">
-					<div class="templatemo-one-signin col-md-15">
-						<div class="form-group">
-							<div class="col-md-12">
-								<p>{{error}}</p>
-							</div>
+			</div>
+			<div class="row">
+				<div class="templatemo-one-signin col-md-15">
+					<div class="form-group">
+						<div class="col-md-12">
+							<p>{{error}}</p>
 						</div>
-				        <div class="form-group">
-				          <div class="col-md-12">		          	
-				            <label for="username" class="control-label">Username</label>
-				            <div class="templatemo-input-icon-container">
-				            	<i class="fa fa-user"></i>
-				            	<input type="text" class="form-control" id="username" name="username" placeholder="">
-				            </div>		            		            		            
-				          </div>              
-				        </div>
-				        <div class="form-group">
-				          <div class="col-md-12">
-				            <label for="password" class="control-label">Password</label>
-				            <div class="templatemo-input-icon-container">
-				            	<i class="fa fa-lock"></i>
-				            	<input type="password" class="form-control" id="password" name="password" placeholder="">
-				            </div>
-				          </div>
-				        </div>
-				        <div class="form-group">
-				          <div class="col-md-12">
-				            <div class="checkbox">
-				                <label>
-				                  <input type="checkbox"> Remember me
-				                </label>
-				            </div>
-				          </div>
-				        </div>
-				        <div class="form-group">
-				          <div class="col-md-12">
-				            <input type="submit" value="LOG IN" class="btn btn-warning">
-				          </div>
-				        </div>
-
-						<div class="container">
-							<div class="col-md-12">			
-								<form class="form-horizontal templatemo-login-form-2" role="form" action="#" method="post">
-									<div class="row">
-										<div class="col-md-12">
-											<center>
-											</br><span>Don't have an account?</span></br>
-											<span>Sign up</span></center></br>
-										</center>	
-								
-										</div>
-									</div>
-									<div class="row" align="center">
-					
-										<li>
-										<button type="button">
-											<a href="sign_up_athlete">Athlete</a>
-										</button>
-										</li>
-					
-										<li>
-										<button type="button">
-											<a href="sign_up_coach">Coach</a>
-										</button>
-										</li>
-					
-										<li>
-										<button type="button">
-											<a href="sign_up_sponsor">Sponsor</a>
-										</button>
-										</li>
-									</div>	
-					
-				        
 					</div>
-				</div>				 	
-		      </form>		      		      
-		</div>
+					<div class="form-group">
+						<div class="col-md-12">		          	
+						<label for="username" class="control-label">Username</label>
+						<div class="templatemo-input-icon-container">
+							<i class="fa fa-user"></i>
+							<input type="text" class="form-control" id="username" name="username" placeholder="">
+						</div>		            		            		            
+						</div>              
+					</div>
+					<div class="form-group">
+						<div class="col-md-12">
+						<label for="password" class="control-label">Password</label>
+						<div class="templatemo-input-icon-container">
+							<i class="fa fa-lock"></i>
+							<input type="password" class="form-control" id="password" name="password" placeholder="">
+						</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-md-12">
+						<div class="checkbox">
+							<label>
+								<input type="checkbox"> Remember me
+							</label>
+						</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-md-12">
+						<input type="submit" value="LOG IN" class="btn btn-warning">
+						</div>
+					</div>
+
+					<div class="container">
+						<div class="col-md-12">			
+							<form class="form-horizontal templatemo-login-form-2" role="form" action="#" method="post">
+								<div class="row">
+									<div class="col-md-12">
+										<center>
+										</br><span>Don't have an account?</span></br>
+										<span>Sign up</span></center></br>
+									</center>	
+							
+									</div>
+								</div>
+								<div class="row" align="center">
+				
+									<li>
+									<button type="button">
+										<a href="sign_up_athlete">Athlete</a>
+									</button>
+									</li>
+				
+									<li>
+									<button type="button">
+										<a href="sign_up_coach">Coach</a>
+									</button>
+									</li>
+				
+									<li>
+									<button type="button">
+										<a href="sign_up_sponsor">Sponsor</a>
+									</button>
+									</li>
+								</div>	
+				
+					
+				</div>
+			</div>				 	
+			</form>		      		      
 	</div>
-</body>
-</html>
+</div>
+{% endblock main %}
