--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,10 @@ function clearText(field){
 	<link href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}" rel="stylesheet" type="text/css">
 	<link href="{{ url_for('static', filename='css/bootstrap-social.css') }}" rel="stylesheet" type="text/css">
 	<link href="{{ url_for('static', filename='css/template_style.css') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css">	
+	<link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap_prods.min.css') }}">
+	
 </head>
 {% block body %}{% endblock body %}
 <head>
