--- a/templates/athleteprofileedit.html
+++ b/templates/athleteprofileedit.html
@@ -53,10 +53,10 @@ function clearText(field){
           <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150" style="position:relative; top:10%; left:19%">
         </div>
         <div class="column text_02"><br>
-          <div style="margin-bottom: 10px">Name</div>
-          <div style="margin-bottom: 10px">Age</div>
-          <div style="margin-bottom: 10px">Sport</div>
-          <div style="margin-bottom: 10px">Rank</div>
+          <div style="margin-bottom: 10px"><input type= "text" name= "name" value="Type Here"></input></div>
+          <div style="margin-bottom: 10px"><input type= "text" name= "name" value="Type Here"></input></div>
+          <div style="margin-bottom: 10px"><input type= "text" name= "name" value="Type Here"></input></div>
+          <div style="margin-bottom: 10px"><input type= "text" name= "name" value="Type Here"></input></div>
         </div>
       </div>
  
@@ -112,8 +112,8 @@ function clearText(field){
                         <div class="col-sm-3">
                           <h2 class="mb-0">Achievements</h2>
                         </div>
-                        <div class="col-sm-9 text-secondary" style="font-size:21px">
-                          xxx
+                        <div class="col-sm-9 text-secondary">
+                          <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
                         </div>
                      </div>
                       <hr>
@@ -122,8 +122,8 @@ function clearText(field){
                         <div class="col-sm-3">
                           <h2 class="mb-0">Best Record</h2>
                         </div>
-                        <div class="col-sm-9 text-secondary" style="font-size:21px">
-                          xxx
+                        <div class="col-sm-9 text-secondary">
+                          <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
                         </div>
                       </div>
                       <hr>
@@ -132,8 +132,8 @@ function clearText(field){
                     <div class="col-sm-3">
                       <h2 class="mb-0">Coach</h2>
                     </div>
-                    <div class="col-sm-9 text-secondary" style="font-size:21px">
-                      xxx
+                    <div class="col-sm-9 text-secondary">
+                      <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
                     </div>
                   </div>
                   <hr>
@@ -141,15 +141,15 @@ function clearText(field){
                     <div class="col-sm-3">
                       <h2 class="mb-0">Coach Contact</h2  >
                     </div>
-                    <div class="col-sm-9 text-secondary" style="font-size:21px">
-                      xxx
+                    <div class="col-sm-9 text-secondary">
+                      <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
                     </div>
                   </div>
                   <hr>
 
                   <div class="row">
                     <div class="col-sm-12">
-                      <a class="btn btn-info " target="__blank" href="athleteprofileedit" style= "font-size:16px">Edit</a>
+                      <a class="btn btn-info " target="__blank" href="athleteprofile" style= "font-size:16px">Finish</a>
                     </div>
                   </div>
                 </div>
