--- a/static/css/templatemo_style.css
+++ b/static/css/templatemo_style.css
@@ -14,6 +14,7 @@ body {
 	font-size: 12px;
 	color: #666;
 	background: #ffffff;
+	overflow-x: hidden;
 }
 
 a:link, a:visited { color: #000000; text-decoration: underline; font-weight: normal;} 
@@ -78,7 +79,6 @@ img {
 	font-size: 26px;
 	letter-spacing: 2px;
 	color: #000000;
-		
 }
 
 .header_03 {
@@ -462,16 +462,22 @@ img {
 	color: white;
   }
   
-  .row:after {
-	content: "";
-	display: table;
-	clear: both;
-  }
+
   
   /* Six columns side by side */
   .column {
 	float: left;
-	width: 16.66%;
+  width: 25%;
+  padding: 10px;
+  height: 190px;
+  align-content:center;
+  }
+  
+  .row:after {
+	content: "";
+	display: table;
+	clear: both;
+	
   }
   
   /* Add a transparency effect for thumnbail images */
@@ -485,4 +491,51 @@ img {
   }
   
   
-  
+  .main-body {
+    padding: 15px;
+}
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+	width:100%;
+	}
+
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
+}
+
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.h-100 {
+    height: 100%!important;
+}
+.shadow-none {
+    box-shadow: none!important;
+}
