view page changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,6 @@ function clearText(field){
 </script>
 </head>
 <head>
-	<!-- templatemo 418 form pack -->
-    <!-- 
-    Form Pack
-    http://www.templatemo.com/preview/templatemo_418_form_pack 
-    -->
 	<title>{{title}}</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
@@ -57,7 +52,7 @@ function clearText(field){
 </head>
 <body>
 <div id="templatemo_header_wrapper">
-<!--  Free Web Templates by TemplateMo.com  -->
+
   <div id="templatemo_header">
     
    	<div id="site_logo"></div>
@@ -72,10 +67,10 @@ function clearText(field){
                   <li><a href="#">Contact</a></li>
 		  <li><a href="login" class="current">Login</a></li>
             </ul>    	
-		</div> <!-- end of menu -->
+		</div> 
     
-    </div>  <!-- end of header -->
-</div> <!-- end of header wrapper -->
+    </div>
+</div>
 {% block main %}{% endblock main %}
 </body>
 </html>
