--- a/templates/viewplayers.html
+++ b/templates/viewplayers.html
@@ -18,10 +18,10 @@
                     <p class="lorem_text">Sport</p>
                     <img src="images/img-1.png" class="image_1">
                     <div class="btn_main">
-                        <div class="buy_bt" style="border:2px solid red">
+                        <div class="buy_bt">
                             <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
+                                <li><a href="#">Add data</a></li>
+                                <li><a href="#">Add request</a></li>
                             </ul>
                         </div>
                     </div>
@@ -39,7 +39,6 @@
                                 <li><a href="#">Buy Now</a></li>
                             </ul>
                         </div>
-                        <h3 class="price_text">Price $30</h3>
                     </div>
                     </div>
                 </div>
