--- a/templates/Login.html
+++ b/templates/Login.html
@@ -10,12 +10,12 @@
 	<div class="col-md-12">			
 		<form class="form-horizontal templatemo-login-form-2" role="form" action="#" method="post">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12" style = "padding-top: 30px;">
 					<h1>Login</h1>
 				</div>
 			</div>
 			<div class="row">
-				<div class="templatemo-one-signin col-md-15">
+				<div class="templatemo-one-signin col-md-12">
 					<div class="form-group">
 						<div class="col-md-12">
 							<p>{{error}}</p>
@@ -69,28 +69,31 @@
 								<div class="row" align="center">
 				
 									<li>
-									<button type="button">
+									<button type="button" class = "sign_up_button">
 										<a href="sign_up_athlete">Athlete</a>
 									</button>
 									</li>
 				
 									<li>
-									<button type="button">
+									<button type="button" class = "sign_up_button">
 										<a href="sign_up_coach">Coach</a>
 									</button>
 									</li>
 				
 									<li>
-									<button type="button">
+									<button type="button" class = "sign_up_button">
 										<a href="sign_up_sponsor">Sponsor</a>
 									</button>
 									</li>
 								</div>	
-				
-					
+							</form>		      		      
+
+						</div>	
+					</div>	
+
 				</div>
 			</div>				 	
-			</form>		      		      
+		</form>		      		      
 	</div>
 </div>
 {% endblock main %}
