--- a/templates/base.html
+++ b/templates/base.html
@@ -61,10 +61,10 @@ function clearText(field){
             <ul>
                   <li><a href="#">Home</a></li>
                   <li><a href="#">Services</a></li>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Company</a></li>
+                  <li><a href="#">Requests</a></li>
+                  <li><a href="viewathletes">Athletes</a></li>
                   <li><a href="#">Contact</a></li>
-		  <li><a href="login" class="current">Login</a></li>
+		  		  <li><a href="login" class="current">Login</a></li>
             </ul>    	
 		</div> 
     
