--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@ function clearText(field){
 		<div id="templatemo_menu">
       		<div id="templatemo_menu_left"></div>
             <ul>
-                  <li><a href="#">Home</a></li>
+                  <li><a href="home">Home</a></li>
                   <li><a href="#">Services</a></li>
                   <li><a href="#">Requests</a></li>
                   <li><a href="viewathletes">Athletes</a></li>
