--- a/templates/requestform.html
+++ b/templates/requestform.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<body style= "background-color:#ffffff">
+<body style= "background-color:#fef4ec">
 {% endblock body %}
 
 {% block main %}
