--- a/templates/sponsorprofileedit.html
+++ b/templates/sponsorprofileedit.html
@@ -25,7 +25,7 @@ function clearText(field){
 		<div id="templatemo_menu">
       		<div id="templatemo_menu_left"></div>
             <ul>
-                  <li><a href="#" class="current">Home</a></li>
+                  <li><a href="home" class="current">Home</a></li>
                   <li><a href="#">Services</a></li>
                   <li><a href="#">Gallery</a></li>
                   <li><a href="#">Company</a></li>
