--- a/templates/viewplayers.html
+++ b/templates/viewplayers.html
@@ -12,15 +12,16 @@
         <div class="product_section_2 layout_padding">
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
+                    <div class="product_box"><a href="athleteprofile">
                     <h4 class="bursh_text">Player name</h4>
                     <p class="lorem_text">Sport</p>
                     <img src="images/img-1.png" class="image_1">
+                    </a>
                     <div class="btn_main">
                         <div class="buy_bt">
                             <ul>
                                 <li><a href="#">Add data</a></li>
-                                <li><a href="#">Add request</a></li>
+                                <li><a href="createrequest">Add request</a></li>
                             </ul>
                         </div>
                     </div>
