--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 <title>Simple Gray, Professional free website template</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="{{ url_for('static', filename='css/template_style.css') }}" rel="stylesheet" type="text/css" />
+<link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css" />
 <script language="javascript" type="text/javascript">
 function clearText(field){
 
@@ -64,7 +64,7 @@ function clearText(field){
                   <li><a href="#">Requests</a></li>
                   <li><a href="viewathletes">Athletes</a></li>
                   <li><a href="#">Contact</a></li>
-		  		  <li><a href="login" class="current">Login</a></li>
+		  		  <li><a href="login">Login</a></li>
             </ul>    	
 		</div> 
     
