--- a/templates/athleteprofile.html
+++ b/templates/athleteprofile.html
@@ -15,9 +15,22 @@ function clearText(field){
 }
 </script>
 </head>
-<body style= "background-color:#fef4ec">
+<head>
+	<title>{{title}}</title>
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet" type="text/css">
+	
+	<link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
+	<link href="{{ url_for('static', filename='css/bootstrap-social.css') }}" rel="stylesheet" type="text/css">
+	<link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css">
+	
+</head>
+<body style= "background-color:#ffffff">
 <div id="templatemo_header_wrapper">
-<!--  Free Web Templates by TemplateMo.com  -->
+
   <div id="templatemo_header">
     
    	<div id="site_logo"></div>
