--- a/templates/sponsorprofileedit.html
+++ b/templates/sponsorprofileedit.html
@@ -6,6 +6,9 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css">	
+<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet" type="text/css">
+<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" type="text/css">
 <script language="javascript" type="text/javascript">
 function clearText(field){
 
@@ -44,39 +47,41 @@ function clearText(field){
   line-height: 1.5;
   font-family:verdana	
 }
+.x{
+    line-height: 0;
+  }
 
 </style>
 
     
 
 <br>
-<div class="row" style="position:relative;top:10%;left:40%">
+<div class="row" style="position:relative;top:10%;left:40.5%">
     <div style= "width:18%">
-      <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150" style="position:relative; top:10%; left:19%">
+      <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150" style="position:relative; top:10%; left:35%">
     </div>
 </div>
 
     <div class="column text_02">
-      <div style="margin-bottom: 10px; position:relative;top:10%;left:178%"><input type= "text" name= "name" value="Type Here"></input></div>
-      <div style="margin-bottom: 10px; position:relative;top:10%;left:178%"><input type= "text" name= "name" value="Type Here"></input></div>
+      <div style="margin-bottom: 10px; position:relative;top:10%;left:178%"><textarea name="About" rows="1" cols="21">Type Here</textarea></div>
+      <div style="margin-bottom: 10px; position:relative;top:10%;left:178%"><textarea name="About" rows="1" cols="21">Type Here</textarea></div>
     </div>
 
 <div class="container">
 <div>
 
       <div class="row gutters-sm">
-         <div class="col-md-8">
-          <div class="card mb-3">
-            <div class="card-body">
-              <div class="row">
-                <div class="col-sm-3">
-                 
-                <div class="row">
+             
+              <div class="card mb-3">
+                <div class="card-body">
+                  
                     <div class="col-sm-3">
-                      <h2 class="mb-0">About</h2>
-                    </div>
-                    <div class="col-sm-9 text-secondary" style="font-size:21px">
-                      <textarea name="About" rows="4" cols="50">Type Here</textarea>
+                     
+                      <div class="row">
+                        
+                        <h2 class="mb-0" style="font-size:23px; padding-left:18px;">About</h2>
+                    <div class="col-sm-9 text-secondary" style="font-size:19px;padding-left: 18px;">
+                      <textarea name="About" rows="4" cols="115">Type Here</textarea>
                     </div>
                  </div>
                   <hr>
@@ -97,7 +102,72 @@ function clearText(field){
 
         </div>
     </div>
+<div class="product_section layout_padding">
+      <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <h1 class="product_taital">Sponsored athletes</h1>
+  
+      </div>
+      </div>
+      <div class="product_section_2 layout_padding" >
+          <div class="row">
+              <div class="col-lg-3 col-sm-6">
+                  <div class="product_box">
+                  <h4 class="bursh_text">Player name</h4>
+                  <p class="lorem_text">Sport</p>
+                  <img src="images/img-1.png" class="image_1">
+                  <div class="btn_main">
+                      <div class="buy_bt">
+                          <ul>
+                              <li><a href="#">Remove</a></li>
+                              
+                          </ul>
+                      </div>
+                   </div>
+                   </div>
+               </div>
+          
+              <div class="row">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="product_box">
+                    <h4 class="bursh_text">Player name</h4>
+                    <p class="lorem_text">Sport</p>
+                    <img src="images/img-1.png" class="image_1">
+                    <div class="btn_main">
+                        <div class="buy_bt">
+                            <ul>
+                                <li><a href="#">Remove</a></li>
+                                
+                            </ul>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+          
+              <div class="row">
+                  <div class="col-lg-3 col-sm-6">
+                      <div class="product_box">
+                      <h4 class="bursh_text">Player name</h4>
+                      <p class="lorem_text">Sport</p>
+                      <img src="images/img-1.png" class="image_1">
+                      <div class="btn_main">
+                          <div class="buy_bt">
+                              <ul>
+                                <li><a href="#">Remove</a></li>
+                                
+                              </ul>
+                          </div>
+                      </div>
+                      </div>
+                  </div>
+              </div>
 
+              
+          <div class="seemore_bt"><a href="#">See More</a></div>
+      </div>
+      </div>
+  </div>
 
 <!-- templatemo 121 simple gray -->
 <!-- 
