--- a/templates/sponsorprofile.html
+++ b/templates/sponsorprofile.html
@@ -56,7 +56,7 @@ function clearText(field){
 </style>
 
     <br>
-    <div class="row" style="position:relative;top:10%;left:40%">
+    <div class="row" style="position:relative;top:10%;left:41.5%">
         <div style= "width:18%">
           <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150" style="position:relative; top:10%; left:19%">
         </div>
@@ -126,8 +126,8 @@ function clearText(field){
                   <div class="btn_main">
                       <div class="buy_bt">
                           <ul>
-                              <li><a href="#">Add data</a></li>
-                              <li><a href="#">Add request</a></li>
+                              <li><a href="#">View Profile</a></li>
+                             
                           </ul>
                       </div>
                    </div>
@@ -143,8 +143,8 @@ function clearText(field){
                     <div class="btn_main">
                         <div class="buy_bt">
                             <ul>
-                                <li><a href="#">Add data</a></li>
-                                <li><a href="#">Add request</a></li>
+                              <li><a href="#">View Profile</a></li>
+                             
                             </ul>
                         </div>
                     </div>
@@ -160,8 +160,8 @@ function clearText(field){
                       <div class="btn_main">
                           <div class="buy_bt">
                               <ul>
-                                  <li><a href="#">Add data</a></li>
-                                  <li><a href="#">Add request</a></li>
+                                <li><a href="#">View Profile</a></li>
+                             
                               </ul>
                           </div>
                       </div>
