--- a/templates/base.html
+++ b/templates/base.html
@@ -61,8 +61,8 @@ function clearText(field){
             <ul>
                   <li><a href="home">Home</a></li>
                   <li><a href="#">Services</a></li>
-                  <li><a href="#">Requests</a></li>
-                  <li><a href="viewathletes">Athletes</a></li>
+                  <li><a href="requests">Requests</a></li>
+                  <li><a href="viewplayers">Athletes</a></li>
                   <li><a href="#">Contact</a></li>
 		  		  <li><a href="login">Login</a></li>
             </ul>    	
